--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
     <!-- Feather Icons -->
     <script src="https://unpkg.com/feather-icons"></script>
@@ -34,7 +35,7 @@
           <div class="dropdown-content">
               <a href="#service1">Alat Uji Kendaraan Bermotor</a>
               <a href="#service2">SIM PKB</a>
-              <a href="#service3">Spare Part</a>
+              <a href="spare.html">Spare Part</a>
           </div>
         </div>
         <a href="#galeri">Galeri</a>
@@ -211,6 +212,19 @@
       </div>
     </section>
     <!-- Contact Section end -->
+
+    <!-- Shorcut Whatsapp Start -->
+
+    <!-- Code begins here -->
+    <div class="fa fa-plus my-float"> 
+      <a href="https://wa.me/6289612792360" class="float">
+        <i class="bi bi-whatsapp"></i>
+      </a>  
+    </div>
+    
+    
+  
+    <!-- Shorcut Whatsapp Start -->
 
     <!-- Footer Start -->
     <footer>
