--- a/spare.html
+++ b/spare.html
@@ -23,7 +23,7 @@
   <body>
     <!-- Navbar Start -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">PT. Berko Berkah Mandiri</a>
+      <a href="index.html" class="navbar-logo">PT. Berko Berkah Mandiri</a>
 
       <div class="navbar-nav">
         <a href="index.html">Beranda</a>
@@ -54,24 +54,49 @@
     <!-- Table Start -->
     <body>
         <div class="container">
-          <div class="column">
-            <h4>Kode Spare Part</h4>
-          </div>
-          <div class="column">
-            <h4>Nama Spare Part</h4>
-          </div>
-          <div class="column">
-            <h4>Spesifikasi</h4>
-          </div>
-          <div class="column">
-            <h4>Merek</h4>
-          </div>
-          <div class="column">
-            <h4>Tipe</h4>
-          </div>
-          <div class="column">
-            <h4>Tahun Produksi</h4>
-          </div>
+          <table class="column">
+            <thead>
+              <tr>
+                <th>No.</th>
+                <th>Kode Spare Part</th>
+                <th>Nama Spare Part</th>
+                <th>Spesifikasi</th>
+                <th>Merek</th>
+                <th>Tipe</th>
+                <th>Tahun Produksi</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>John Doe</td>
+                <td>30</td>
+                <td>Jakarta</td>
+                <td>Jakarta</td>
+                <td>Jakarta</td>
+                <td>Jakarta</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Jane Smith</td>
+                <td>28</td>
+                <td>Bandung</td>
+                <td>Jakarta</td>
+                <td>Jakarta</td>
+                <td>Jakarta</td>
+
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Michael Johnson</td>
+                <td>35</td>
+                <td>Surabaya</td>
+                <td>Jakarta</td>
+                <td>Jakarta</td>
+                <td>Jakarta</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </body>
     <!-- Table Start -->
